# noxp

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  middlewares.rs  route.rs  server.rs  thread.rs
src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
views/: form.html  hello.html
